<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/send_message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ffdddddd"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/text_quick_action"
            android:textColor="@color/quickAction"
            android:textSize="18dp"
            android:paddingStart="20dp"/>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingStart="20dp">

            <ImageButton
                android:id="@+id/btn_restaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/btn_restaurant"
                android:onClick="onRestaurantButton"
                android:src="@drawable/ic_local_dining_black_24dp"
                android:tint="@color/quickAction" />

            <ImageButton
                android:id="@+id/btn_gas_station"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/btn_gas_stations"
                android:onClick="onGasStationButton"
                android:src="@drawable/ic_local_gas_station_black_24dp"
                android:tint="@color/quickAction" />

            <ImageButton
                android:id="@+id/btn_hospital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/btn_hospital"
                android:onClick="onHospitalButton"
                android:src="@drawable/ic_local_hospital_black_24dp"
                android:tint="@color/quickAction" />

            <ImageButton
                android:id="@+id/btn_cinema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/btn_cinema"
                android:onClick="onCinemaButton"
                android:src="@drawable/ic_local_movies_black_24dp"
                android:tint="@color/quickAction" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>